Assistant checkpoint: Setup BoxEat Expo SDK 54 base structure
Assistant generated file changes:
- package.json: Update dependencies for Expo SDK 54
- app.json: Update Expo config for SDK 54
- .env.example: Add environment variables template
- tsconfig.json: Add TypeScript configuration
- src/theme.ts: Create theme tokens in TypeScript
- src/i18n/fr.json: Add French translations
- src/i18n/nl.json: Add Dutch translations
- src/i18n/en.json: Add English translations
- src/i18n/index.ts: Create i18n manager
- src/types/index.ts: Create type definitions
- src/store/cart.store.ts: Create cart store with TypeScript
- src/store/user.store.ts: Create user store
- src/store/subscription.store.ts: Create subscription store
- src/services/api.ts: Create API client with mocks
- src/utils/qr.ts: Create QR code generator utility
- components/MealCard.js: Convert MealCard to TypeScript with enhanced UI
- src/components/Button.tsx: Create reusable Button component
- src/components/QuantityStepper.tsx: Create quantity stepper component

---

User prompt:

Voici un prompt pour que tu puisses créer , ajouter ou modifier l application BoxEat pour qu elle puisse enfin s'ouvrir sur expo go en tunnel et phase tests en SDK 54 node 20

🎯 OBJECTIF
Crée une application mobile **BoxEat** (Expo React Native) permettant de :
- Parcourir les plats de la semaine, ajouter au panier, planifier la semaine,
- Payer (Stripe placeholder), générer un **QR code** par commande,
- Scanner le QR en machine (écran dédié), marquer le retrait,
- Gérer abonnements (solde repas) + historique de commandes,
- Profil (moyens de paiement, factures, langues FR/NL/EN) + FAQ.

⚙️ CONTRAINTES TECHNIQUES
- Plateforme: **Expo SDK 54**, **React Native 0.74**, **Node 20**, **Replit (Nix)**.
- Démarrage Replit (Android, tunnel):
  `EXPO_NO_PREINSTALL=1 npx expo start --tunnel -c`
- Navigation: **@react-navigation/native + native-stack** (pas d’expo-router).
- State: **Zustand** (cart, user, subscription).
- Réseau: **axios** 

--- a/app.json
+++ b/app.json
@@ -7,29 +7,38 @@
     "orientation": "portrait",
     "icon": "./assets/logo-boxeat.png",
     "userInterfaceStyle": "light",
+    "scheme": "boxeat",
     "splash": {
       "image": "./assets/logo-boxeat.png",
       "resizeMode": "contain",
       "backgroundColor": "#3FAE49"
     },
-    "assetBundlePatterns": [
-      "**/*"
-    ],
+    "assetBundlePatterns": ["**/*"],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.boxeat.app"
+      "bundleIdentifier": "com.boxeat.app",
+      "infoPlist": {
+        "NSCameraUsageDescription": "BoxEat a besoin d'accéder à la caméra pour scanner les QR codes."
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/logo-boxeat.png",
         "backgroundColor": "#3FAE49"
       },
-      "package": "com.boxeat.app"
+      "package": "com.boxeat.app",
+      "permissions": ["CAMERA"]
     },
     "web": {
       "favicon": "./assets/logo-boxeat.png"
     },
-    "plugins": [],
-    "scheme": "boxeat"
+    "plugins": [
+      [
+        "expo-camera",
+        {
+          "cameraPermission": "Autoriser BoxEat à utiliser la caméra pour scanner les QR codes."
+        }
+      ]
+    ]
   }
 }
